objects/DMAPP__DM_Usage__c.object
<CustomObject>
    <description>NO CONFIGURATION SUPPORT 

This object stores information about user activity on the various dealmaker screens. It is intended for use by customers wish to report on the uptake of Dealmaker by their users.</description>
    <fields>
        <fullName>DMAPP__AM_Details__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AM Details</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__AM_Objectives__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AM Objectives</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__AM_PPT__c</fullName>
        <description>AM Powerpoint usage counter</description>
        <inlineHelpText>AM Powerpoint usage counter</inlineHelpText>
        <label>AM PPT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__AM_ScoreCard__c</fullName>
        <description>AM ScoreCard page hit counter</description>
        <label>AM_ScoreCard</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__AM_Settings__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AM Settings</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__AM_Usage__c</fullName>
        <formula>DMAPP__AM_Details__c + DMAPP__AM_Objectives__c + DMAPP__AM_PPT__c + DMAPP__AM_Settings__c + DMAPP__Opportunity_Map__c + DMAPP__Segmentation_Map__c + DMAPP__Value_Map__c + DMAPP__AM_ScoreCard__c + DMAPP__Plan_Completeness__c + DMAPP__Plan_Clone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AM Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Actions_Mobile__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actions Mobile</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Actions__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actions</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Assessment_Mobile__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Assessment Mobile</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Assessment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Assessment</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Call_Planner_Mobile__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Call Planner Mobile</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Call_Planner__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Call Planner</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Coach_Mobile__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Coach Mobile</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Coach__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Coach</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Criteria_Mobile__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Criteria Mobile</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Criteria__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Criteria</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__DM_Usage__c</fullName>
        <formula>DMAPP__AM_Usage__c + DMAPP__SOM_Usage__c + DMAPP__PB_Usage__c + DMAPP__Call_Planner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DM Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__DVLS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DVLS</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Insight_Mobile__c</fullName>
        <label>Insight Mobile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Insight__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Insight</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Launchpad__c</fullName>
        <label>Launchpad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Milestones__c</fullName>
        <label>Milestones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__OM_PPT__c</fullName>
        <description>OM Powerpoint usage counter</description>
        <inlineHelpText>OM Powerpoint usage counter</inlineHelpText>
        <label>OM PPT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Opportunity_Map__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Opportunity Map</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__PB_Launchpad__c</fullName>
        <description>Page hits for the Playbook Launchpad</description>
        <label>PB Launchpad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__PB_Usage__c</fullName>
        <formula>DMAPP__Playbook__c + DMAPP__Team_View__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PB Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Plan_Clone__c</fullName>
        <label>Plan Clone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Plan_Completeness__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Plan Completeness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Playbook_Mobile__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Playbook Mobile</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Playbook__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Playbook</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__PoliticalMap_Launchpad__c</fullName>
        <label>PoliticalMap_Launchpad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Politics_Mobile__c</fullName>
        <description>Hit counter for the Mobile Political Map page.</description>
        <inlineHelpText>Hit counter for the Mobile Political Map page.</inlineHelpText>
        <label>Politics Mobile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Politics__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Politics</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Quicklink__c</fullName>
        <description>Quicklink hit counter</description>
        <inlineHelpText>Quicklink hit counter</inlineHelpText>
        <label>Quicklink</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__SOM_Usage__c</fullName>
        <formula>DMAPP__Actions__c + DMAPP__Assessment__c + DMAPP__Coach__c + DMAPP__Criteria__c + DMAPP__Insight__c + DMAPP__Milestones__c + DMAPP__OM_PPT__c + DMAPP__Politics__c + DMAPP__Strategy__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SOM Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Segmentation_Map__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Segmentation Map</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Smart_Browser__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Smart Browser</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategy_Mobile__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Strategy Mobile</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategy__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Strategy</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Team_View__c</fullName>
        <description>Team View page hit counter</description>
        <inlineHelpText>Team View page hit counter</inlineHelpText>
        <label>Team View</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Usage_Date__c</fullName>
        <description>This field captures the date for particular user activity. For each screen / user tuple there will be at most 1 log record for any given date.</description>
        <label>Usage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMAPP__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user whose activity is recorded in a particular activity record</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Dealmaker_Activity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Value_Map__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Value Map</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Dealmaker Usage</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DM Usage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealmaker Usage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>